@@ -4096,12 +4096,6 @@ DECL|field|fsLock
 specifier|private
 name|ReentrantReadWriteLock
 name|fsLock
-init|=
-operator|new
-name|ReentrantReadWriteLock
-argument_list|(
-literal|true
-argument_list|)
 decl_stmt|;
 comment|/**    * Used when this NN is in standby state to read from the shared edit log.    */
 DECL|field|editLogTailer
@@ -4728,6 +4722,35 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|boolean
+name|fair
+init|=
+name|conf
+operator|.
+name|getBoolean
+argument_list|(
+literal|"dfs.namenode.fslock.fair"
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"fsLock is fair:"
+operator|+
+name|fair
+argument_list|)
+expr_stmt|;
+name|fsLock
+operator|=
+operator|new
+name|ReentrantReadWriteLock
+argument_list|(
+name|fair
+argument_list|)
+expr_stmt|;
 try|try
 block|{
 name|resourceRecheckInterval
