@@ -60,19 +60,7 @@ name|junit
 operator|.
 name|Assert
 operator|.
-name|assertEquals
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
-operator|.
-name|assertTrue
+name|*
 import|;
 end_import
 
@@ -871,6 +859,126 @@ argument_list|,
 name|fsn
 operator|.
 name|isPopulatingReplQueues
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testFsLockFairness ()
+specifier|public
+name|void
+name|testFsLockFairness
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|FSEditLog
+name|fsEditLog
+init|=
+name|Mockito
+operator|.
+name|mock
+argument_list|(
+name|FSEditLog
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|FSImage
+name|fsImage
+init|=
+name|Mockito
+operator|.
+name|mock
+argument_list|(
+name|FSImage
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Mockito
+operator|.
+name|when
+argument_list|(
+name|fsImage
+operator|.
+name|getEditLog
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|fsEditLog
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+literal|"dfs.namenode.fslock.fair"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|FSNamesystem
+name|fsNamesystem
+init|=
+operator|new
+name|FSNamesystem
+argument_list|(
+name|conf
+argument_list|,
+name|fsImage
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|fsNamesystem
+operator|.
+name|getFsLockForTests
+argument_list|()
+operator|.
+name|isFair
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+literal|"dfs.namenode.fslock.fair"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|fsNamesystem
+operator|=
+operator|new
+name|FSNamesystem
+argument_list|(
+name|conf
+argument_list|,
+name|fsImage
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|fsNamesystem
+operator|.
+name|getFsLockForTests
+argument_list|()
+operator|.
+name|isFair
 argument_list|()
 argument_list|)
 expr_stmt|;
